recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:5: error: not found: value piral
  if (piral(0, 90, 12, 3)) {return 0};
      ^Spiral:5: error: return outside method definition
  if (piral(0, 90, 12, 3)) {return 0};
                            ^Spiral:7: error: not found: value length
  else {avance(length);
               ^Spiral:8: error: not found: value angle
       gauche(angle);
              ^Spiral:9: error: return outside method definition
        return spiral (steps -1, angle, length +3 , increment);
        ^